--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 [ ] Finalize data structures.
 [ ] Document data structures (tsdoc).
 [ ] Consider moving some test stuff classes to the distribution.
+[ ] Switch DB engine to Prisma.
